--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="" href="css/index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="js/index.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar">
-        <span class="open-sidebar">
-            <a href="#" class="glyphicon glyphicon-menu-hamburger"></a>
-        </span>
 
+    <div class="navbar-side">
+        <span class="open-sidebar">
+            <a id="open-sidebar" href="#" class="glyphicon glyphicon-menu-hamburger"></a>
+        </span>
+    </div>
+
+    <nav class="navbar-main">
         <ul class="navbar-nav">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -28,8 +32,17 @@
         <li><a href="#">Contact</a></li>
     </div>
     
-    <div class="wrap-main">
+    <div id="wrap-main">
         <h1>This is Side Menu</h1>
     </div>
+    <script>
+        var openSidebar = document.getElementById("open-sidebar");
+        openSidebar.addEventListener("click",openSidebarClicked);
+        function openSidebarClicked()
+        {
+            document.getElementById('side-menu').style.width = '250px';
+            document.getElementById('wrap-main').style.marginLeft = '250px';
+        }
+    </script>
 </body>
 </html>
