--- a/index.html
+++ b/index.html
@@ -4,21 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="" href="css/index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
     <script src="js/index.js"></script>
-    <title>Document</title>
+    <title>Side Menu</title>
 </head>
 <body>
-
-    <div class="navbar-side">
-        <span class="open-sidebar">
-            <a id="open-sidebar" href="#" class="glyphicon glyphicon-menu-hamburger"></a>
-        </span>
-    </div>
-
-    <nav class="navbar-main">
+    <nav class="navbar">
         <ul class="navbar-nav">
+            <li> <a id="open-sidebar" href="#" class="glyphicon glyphicon-menu-hamburger"></a></li>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
@@ -26,22 +20,31 @@
     </nav>
 
     <div id="side-menu" class="side-menu">
-        <a href="#" class="btn-close"></a>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <a id="close-sidebar" href="#" class="btn-close">Close</a>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
     </div>
     
     <div id="wrap-main">
         <h1>This is Side Menu</h1>
     </div>
-    <script>
+
+     <script>
         var openSidebar = document.getElementById("open-sidebar");
         openSidebar.addEventListener("click",openSidebarClicked);
         function openSidebarClicked()
         {
             document.getElementById('side-menu').style.width = '250px';
             document.getElementById('wrap-main').style.marginLeft = '250px';
+        }
+
+        var closeSidebar = document.getElementById("close-sidebar");
+        closeSidebar.addEventListener("click",closeSidebarClicked);
+        function closeSidebarClicked()
+        {
+            document.getElementById('side-menu').style.width = '0px';
+            document.getElementById('wrap-main').style.marginLeft = '0px';
         }
     </script>
 </body>
