--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </ul>
     </nav>
 
-    <div id="side-menu" class="side-menu">
-        <a id="close-sidebar" href="#" class="btn-close">Close</a>
+    <div id="side-menu">
+        <a id="close-sidebar" href="#" class="btn-close">x</a>
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
